--- a/my-work.html
+++ b/my-work.html
@@ -3,11 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Cory Roberts Work</title>
-    <style>
-      footer {
-        text-align: center;
-      }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <header>
