--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <img src="https://files.jcink.net/uploads/cory/me2.jpg" alt="Cory Roberts" style="width: 100px; height: 100px; border-radius: 5px">
+      <img src="https://files.jcink.net/uploads/cory/me2.jpg" alt="Cory Roberts" id="me">
       <h1 style="display: inline">Cory Roberts Portfolio</h1>
     </header>
 <main>
