--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <header>
+    <header id="main_header">
       <img src="https://files.jcink.net/uploads/cory/me2.jpg" alt="Cory Roberts" id="me">
       <h1 style="display: inline">Cory Roberts Portfolio</h1>
     </header>
