--- a/my-work.html
+++ b/my-work.html
@@ -30,11 +30,25 @@
     <li><a href="https://cory.jcink.net/index.php?skinid=5" target="_blank">Misty Woods</a></li>
     <li><a href="https://cory.jcink.net/index.php?skinid=37" target="_blank">Resource World</a></li>
   </ul>
+  <h2>To-Do List</h2>
+      <div id="to-do-list" style="background: #47B5FF; border: 1px solid #1363DF; padding: 10px">
+        <a href="javascript: void(0)" id="add-to-do">Add a To-Do</a>
+      </div>
 </p>
     </main>
     <footer>
       &raquo; <a href="index.html">Back Home</a> <br>
       &copy; Copyright Cory Roberts, 2022
     </footer>
+  <script>
+    let add_to_do = document.querySelector("#add-to-do");
+    
+    add_to_do.onclick = function (){
+      let to_do_prompt = prompt('Name of Your To-Do:');
+      let to_do_div = document.createElement('div');
+      let to_do_len = to_do_div.length;
+      to_do_div.innerHTML = '<input type="checkbox" id="to-do-' + to_do_len + 1 + '" name="to-do-' + to_do_len + 1 + '"> <label for="to-do-' + to_do_len + 1 + '">' + to_do_prompt + '</label>';
+    };
+  </script>
   </body>
 </html>
