--- a/my-work.html
+++ b/my-work.html
@@ -31,7 +31,7 @@
     <li><a href="https://cory.jcink.net/index.php?skinid=37" target="_blank">Resource World</a></li>
   </ul>
   <h2>To-Do List</h2>
-      <div id="to-do-list" style="background: #47B5FF; border: 1px solid #1363DF; padding: 10px">
+      <div id="to-do-list" style="border: 1px solid #1363DF; padding: 10px; width: 25%">
         <a href="javascript: void(0)" id="add-to-do">Add a To-Do</a>
       </div>
 </p>
