--- a/my-work.html
+++ b/my-work.html
@@ -32,7 +32,7 @@
   </ul>
   <h2>To-Do List</h2>
       <div id="to-do-list" style="border: 1px solid #1363DF; padding: 10px; width: 25%">
-        <a href="javascript: void(0)" id="add-to-do">Add a To-Do</a>
+        <div style="text-align: center"><a href="javascript: void(0)" id="add-to-do" style="margin: 0 auto">Add a To-Do</a></div>
       </div>
 </p>
     </main>
