--- a/my-work.html
+++ b/my-work.html
@@ -47,7 +47,7 @@
       let to_do_prompt = prompt('Name of Your To-Do:');
       let to_do_div = document.createElement('div');
       let to_do_len = to_do_div.length;
-      to_do_div.innerHTML = '<input type="checkbox" id="to-do-' + to_do_len + 1 + '" name="to-do-' + to_do_len + 1 + '"> <label for="to-do-' + to_do_len + 1 + '">' + to_do_prompt + '</label>';
+      to_do_div.innerHTML = '<input type="checkbox" id="to-do-' + parseInt(to_do_len + 1, 10) + '"> <label for="to-do-' + parseInt(to_do_len + 1, 10) + '">' + to_do_prompt + '</label>';
       document.querySelector("#to-do-list").appendChild(to_do_div);
     };
   </script>
