--- a/my-work.html
+++ b/my-work.html
@@ -47,7 +47,14 @@
       let to_do_prompt = prompt('Name of Your To-Do:');
       let to_do_div = document.createElement('div');
       let to_do_len = to_do_div.length;
-      to_do_div.innerHTML = '<input type="checkbox" id="to-do-' + parseInt(to_do_len + 1, 10) + '" style="vertical-align: middle"> <label for="to-do-' + parseInt(to_do_len + 1, 10) + '">' + to_do_prompt + '</label>';
+      
+      if (to_do_len === 0) {
+        to_do_div.innerHTML = '<input type="checkbox" id="to-do-1" style="vertical-align: middle"> <label for="to-do-1">' + to_do_prompt + '</label>';
+      } else  {
+        let new_to_do_len = parseInt(to_do_len + 1, 10);
+        to_do_div.innerHTML = '<input type="checkbox" id="to-do-' + new_to_do_len + '" style="vertical-align: middle"> <label for="to-do-' + new_to_do_len + '">' + to_do_prompt + '</label>';
+      }
+      
       document.querySelector("#to-do-list").appendChild(to_do_div);
     };
   </script>
