--- a/my-work.html
+++ b/my-work.html
@@ -33,6 +33,7 @@
   <h2>To-Do List</h2>
       <div id="to-do-list" style="border: 1px solid #1363DF; padding: 10px; width: 25%">
         <div style="text-align: right"><a href="javascript: void(0)" id="add-to-do" style="margin: 0 auto">Add a To-Do</a></div>
+        <div id="contents"></div>
       </div>
 </p>
     </main>
@@ -55,12 +56,12 @@ add_to_do.onclick = function() {
         to_do_div.innerHTML = '<input type="checkbox" class="to-do" id="to-do-' + to_do_len + '" style="vertical-align: middle"> <label for="to-do-' + to_do_len + '">' + to_do_prompt + '</label>';
     }
 
-    document.querySelector('#to-do-list').appendChild(to_do_div);
-    localStorage.setItem('to-do-list', document.querySelector('#to-do-list').innerHTML);
+    document.querySelector('#to-do-list #contents').appendChild(to_do_div);
+    localStorage.setItem('to-do-list', document.querySelector('#to-do-list #contents').innerHTML);
 };
 
 if (localStorage.getItem('to-do-list').length) {
-    document.querySelector('#to-do-list').innerHTML = localStorage.getItem('to-do-list');
+    document.querySelector('#to-do-list #contents').innerHTML = localStorage.getItem('to-do-list');
 }
   
   let to_do_click = document.querySelectorAll('input.to-do');
