--- a/my-work.html
+++ b/my-work.html
@@ -30,7 +30,7 @@
     <li><a href="https://cory.jcink.net/index.php?skinid=5" target="_blank">Misty Woods</a></li>
     <li><a href="https://cory.jcink.net/index.php?skinid=37" target="_blank">Resource World</a></li>
   </ul>
-  <h2>To-Do List</h2>
+  <h2>Vanilla JavaScript To-Do List</h2>
       <div id="to-do-list" style="border: 1px solid #1363DF; padding: 10px; width: 25%">
         <div style="text-align: right"><a href="javascript: void(0)" id="add-to-do" style="margin: 0 auto">Add a To-Do</a></div>
         <div id="contents"></div>
