--- a/my-work.html
+++ b/my-work.html
@@ -46,10 +46,13 @@ let add_to_do = document.querySelector('#add-to-do');
 
 add_to_do.onclick = function() {
     let to_do_prompt = prompt('Name of Your To-Do:');
+  
+  if (to_do_prompt !== null) {
     let to_do_div = document.createElement('div');
     to_do_div.className = 'to-do-div';
     let to_do_len = document.querySelectorAll('div.to-do-div').length;
-
+  }
+  
     if (to_do_len === 0) {
         to_do_div.innerHTML = '<input type="checkbox" class="to-do" id="to-do-1" style="vertical-align: middle"> <label for="to-do-1">' + to_do_prompt + '</label>';
     } else {
