--- a/my-work.html
+++ b/my-work.html
@@ -47,7 +47,7 @@ let add_to_do = document.querySelector('#add-to-do');
 add_to_do.onclick = function() {
     let to_do_prompt = prompt('Name of Your To-Do:');
   
-  if (to_do_prompt !== null) {
+  if (to_do_prompt !== null || undefined) {
     let to_do_div = document.createElement('div');
     to_do_div.className = 'to-do-div';
     let to_do_len = document.querySelectorAll('div.to-do-div').length;
