--- a/my-work.html
+++ b/my-work.html
@@ -76,6 +76,7 @@ if (localStorage.getItem('to-do-list').length) {
   let to_do_div_len = document.querySelectorAll('div.to-do-div').length;
   
   for (const i in to_do_div_len) {
+    console.log(i);
   if (localStorage.getItem('to-do-' + i) === 'true') {
     document.querySelector('#to-do-' + i).checked = true;
   }
