--- a/my-work.html
+++ b/my-work.html
@@ -68,19 +68,16 @@ if (localStorage.getItem('to-do-list').length) {
 }
   
   let to_do_click = document.querySelectorAll('input.to-do');
+  let id;
   
   to_do_click.onclick = function() {
-    localStorage.setItem('#' + this.id, true);
+    id = this.id;
+    localStorage.setItem(this.id, true);
   };
   
-  let to_do_div_len = document.querySelectorAll('div.to-do-div').length;
-  
-  for (const i in to_do_div_len) {
-    console.log(i);
-  if (localStorage.getItem('to-do-' + i) === 'true') {
-    document.querySelector('#to-do-' + i).checked = true;
+    if (localStorage.getItem('to-do-' + id) === 'true') {
+    document.querySelector('#to-do-' + id).checked = true;
   }
-}
 </script>
   </body>
 </html>
