--- a/my-work.html
+++ b/my-work.html
@@ -74,7 +74,7 @@ if (localStorage.getItem('to-do-list').length) {
   };
   
   for (const i in to_do_click) {
-    console.log(i);
+    console.log(document.querySelectorAll('input.to-do').id[i]);
     if (localStorage.getItem('to-do-' + i) === 'true') {
     document.querySelector('#to-do-' + i).checked = true;
     }
