--- a/my-work.html
+++ b/my-work.html
@@ -76,7 +76,7 @@ if (localStorage.getItem('to-do-list').length) {
         var array = [];
 
         for (var i = 0; i < localStorage.length; i++) {
-            if (localStorage.key(i).indexOf('to-do-') !== -1) {
+            if (localStorage.key(i).indexOf(/to-do-[0-9]+/i) !== -1) {
                 array.push(localStorage.key(i));
               console.log(localStorage.getItem(localStorage.key(i)));
                 localStorage.getItem(localStorage.key(i)).checked = true;
