--- a/my-work.html
+++ b/my-work.html
@@ -50,15 +50,9 @@ add_to_do.onclick = function() {
   if (to_do_prompt !== null || undefined) {
     let to_do_div = document.createElement('div');
     to_do_div.className = 'to-do-div';
-    let to_do_len = document.querySelectorAll('div.to-do-div').length;
-  
-    if (to_do_len === 0) {
-        to_do_div.innerHTML = '<input type="checkbox" class="to-do" id="to-do-1" style="vertical-align: middle"> <label for="to-do-1">' + to_do_prompt + '</label>';
-    } else {
-        to_do_div.innerHTML = '<input type="checkbox" class="to-do" id="to-do-' + to_do_len + '" style="vertical-align: middle"> <label for="to-do-' + to_do_len + '">' + to_do_prompt + '</label>';
-    }
-
-    document.querySelector('#to-do-list #contents').appendChild(to_do_div);
+            let to_do_len = document.querySelectorAll('div.to-do-div').length;
+        document.querySelector('#to-do-list #contents').appendChild(to_do_div);
+    to_do_div.innerHTML = '<input type="checkbox" class="to-do" id="to-do-1" style="vertical-align: middle"> <label for="to-do-1">' + to_do_prompt + '</label>';
     localStorage.setItem('to-do-list', document.querySelector('#to-do-list #contents').innerHTML);
   }
 };
@@ -69,9 +63,11 @@ if (localStorage.getItem('to-do-list').length) {
   
   let to_do_click = document.querySelectorAll('input.to-do');
   
-  to_do_click.onclick = function() {
+for (let i = 0; i < to_do_click.length; i++) {
+  to_do_click[i].onclick = function() {
     localStorage.setItem(this.id, true);
   };
+  }
   
         var array = [];
 
