--- a/my-work.html
+++ b/my-work.html
@@ -50,12 +50,8 @@ add_to_do.onclick = function() {
   if (to_do_prompt !== null || undefined) {
     let to_do_div = document.createElement('div');
     to_do_div.className = 'to-do-div';
-            let to_do = document.querySelectorAll('div.to-do-div');
-    
-    for (let i = 0; i < to_do.length; i++) {
-    to_do_div.innerHTML = '<input type="checkbox" class="to-do" id="to-do-' + i + '" style="vertical-align: middle"> <label for="to-do-' + i+ '">' + to_do_prompt + '</label>';
-    }
-    
+    let to_do = document.querySelectorAll('div.to-do-div');
+    to_do_div.innerHTML = '<input type="checkbox" class="to-do" dtyle="vertical-align: middle"> <label>' + to_do_prompt + '</label>';
     document.querySelector('#to-do-list #contents').appendChild(to_do_div);
     localStorage.setItem('to-do-list', document.querySelector('#to-do-list #contents').innerHTML);
   }
