--- a/my-work.html
+++ b/my-work.html
@@ -51,7 +51,7 @@ add_to_do.onclick = function() {
     let to_do_div = document.createElement('div');
     to_do_div.className = 'to-do-div';
     let to_do = document.querySelectorAll('div.to-do-div');
-    to_do_div.innerHTML = '<input type="checkbox" class="to-do" dtyle="vertical-align: middle"> <label>' + to_do_prompt + '</label>';
+    to_do_div.innerHTML = '<label><input type="checkbox" class="to-do" dtyle="vertical-align: middle"> ' + to_do_prompt + '</label>';
     document.querySelector('#to-do-list #contents').appendChild(to_do_div);
     localStorage.setItem('to-do-list', document.querySelector('#to-do-list #contents').innerHTML);
   }
