--- a/my-work.html
+++ b/my-work.html
@@ -70,7 +70,7 @@ if (localStorage.getItem('to-do-list').length) {
   }
   
    for (let i = 0; i < to_do.length; i++) {
-     if (localStorage.setItem('to-do-' + to_do[i].innerText) === 'true') {
+     if (localStorage.getItem('to-do-' + to_do[i].innerText) === 'true') {
        to_do[i].checked = true;
      }
    }
