--- a/my-work.html
+++ b/my-work.html
@@ -72,6 +72,8 @@ if (localStorage.getItem('to-do-list').length) {
    for (let i = 0; i < to_do.length; i++) {
      if (localStorage.getItem('to-do-' + to_do[i].innerText) === to_do[i].innerText) {
        to_do[i].checked = true;
+     } else {
+       to_do[i].checked = false;
      }
    }
 </script>
