--- a/my-work.html
+++ b/my-work.html
@@ -61,7 +61,7 @@ if (localStorage.getItem('to-do-list').length) {
     document.querySelector('#to-do-list #contents').innerHTML = localStorage.getItem('to-do-list');
 }
 
-  let to_do = document.querySelectorAll('input.to-do');
+  let to_do = document.querySelectorAll('label');
   
   for (let i = 0; i < to_do.length; i++) {
     to_do[i].onclick = function() {
