--- a/my-work.html
+++ b/my-work.html
@@ -61,16 +61,16 @@ if (localStorage.getItem('to-do-list').length) {
     document.querySelector('#to-do-list #contents').innerHTML = localStorage.getItem('to-do-list');
 }
 
-  var to_do = document.querySelectorAll('label');
+  let to_do = document.querySelectorAll('label');
   
-  for (var i = 0; i < to_do.length; i++) {
+  for (let i = 0; i < to_do.length; i++) {
     to_do[i].onclick = function() {
-      localStorage.setItem('to-do-' + to_do[i].innerText, to_do[i].innerText);
+      localStorage.setItem('to-do-' + to_do[i].innerText.trim(), to_do[i].innerText.trim());
     };
   }
   
    for (let i = 0; i < to_do.length; i++) {
-     if (localStorage.getItem('to-do-' + to_do[i].innerText) === to_do[i].innerText) {
+     if (localStorage.getItem('to-do-' + to_do[i].innerText.trim()) === to_do[i].innerText.trim()) {
        to_do[i].checked = true;
      }
    }
