--- a/my-work.html
+++ b/my-work.html
@@ -71,7 +71,7 @@ if (localStorage.getItem('to-do-list').length) {
   
    for (let i = 0; i < to_do.length; i++) { 
      if (localStorage.getItem('to-do-' + to_do[i].innerText.trim()) !== null || undefined && localStorage.getItem('to-do-' + to_do[i].innerText.trim()) === to_do[i].innerText.trim()) {
-       to_do[i].childNodes.checked = true;
+       to_do[i].children[0].checked = true;
      }
    }
 </script>
