--- a/my-work.html
+++ b/my-work.html
@@ -46,34 +46,38 @@ let add_to_do = document.querySelector('#add-to-do');
 
 add_to_do.onclick = function() {
     let to_do_prompt = prompt('Name of Your To-Do:');
-  
-  if (to_do_prompt !== null || undefined) {
-    let to_do_div = document.createElement('div');
-    to_do_div.className = 'to-do-div';
-    let to_do = document.querySelectorAll('div.to-do-div');
-    to_do_div.innerHTML = '<label><input type="checkbox" class="to-do" style="vertical-align: middle"> ' + to_do_prompt + '</label>';
-    document.querySelector('#to-do-list #contents').appendChild(to_do_div);
-    localStorage.setItem('to-do-list', document.querySelector('#to-do-list #contents').innerHTML);
-  }
+
+    if (to_do_prompt !== null || undefined) {
+        let to_do_div = document.createElement('div');
+        to_do_div.className = 'to-do-div';
+        let to_do = document.querySelectorAll('div.to-do-div');
+        to_do_div.innerHTML = '<label><input type="checkbox" class="to-do" style="vertical-align: middle"> ' + to_do_prompt + '</label>';
+        document.querySelector('#to-do-list #contents').appendChild(to_do_div);
+        localStorage.setItem('to-do-list', document.querySelector('#to-do-list #contents').innerHTML);
+    }
 };
 
 if (localStorage.getItem('to-do-list').length) {
     document.querySelector('#to-do-list #contents').innerHTML = localStorage.getItem('to-do-list');
 }
 
-  let to_do = document.querySelectorAll('label');
-  
-  for (let i = 0; i < to_do.length; i++) {
+let to_do = document.querySelectorAll('label');
+
+for (let i = 0; i < to_do.length; i++) {
     to_do[i].onclick = function() {
-      localStorage.setItem('to-do-' + to_do[i].innerText.trim(), to_do[i].innerText.trim());
+        if (this.checked === true) {
+            localStorage.setItem('to-do-' + to_do[i].innerText.trim(), to_do[i].innerText.trim());
+        } else {
+            localStorage.removeItem('to-do-' + to_do[i].innerText.trim());
+        }
     };
-  }
-  
-   for (let i = 0; i < to_do.length; i++) { 
-     if (localStorage.getItem('to-do-' + to_do[i].innerText.trim()) !== null || undefined && localStorage.getItem('to-do-' + to_do[i].innerText.trim()) === to_do[i].innerText.trim()) {
-       to_do[i].children[0].checked = true;
-     }
-   }
+}
+
+for (let i = 0; i < to_do.length; i++) {
+    if (localStorage.getItem('to-do-' + to_do[i].innerText.trim()) !== null || undefined && localStorage.getItem('to-do-' + to_do[i].innerText.trim()) === to_do[i].innerText.trim()) {
+        to_do[i].children[0].checked = true;
+    }
+}
 </script>
   </body>
 </html>
