--- a/my-work.html
+++ b/my-work.html
@@ -66,11 +66,11 @@ if (localStorage.getItem('to-do-list') !== null) {
   for (let i = 0; i < remove_to_do.length; i++) {
  remove_to_do[i].onclick = function() {
    this.parentNode.remove();
-localStorage.setItem('remove-to-do-' + this.previousSibling.innerText.trim(), true);
+localStorage.setItem('remove-to-do-' + this.previousElementSibling.innerText.trim(), true);
  };
     
-    if (localStorage.getItem('remove-to-do-' + remove_to_do[i].previousSibling.innerText.trim()) === 'true') {
-      remove_to_do[i].previousSibling.remove();
+    if (localStorage.getItem('remove-to-do-' + remove_to_do[i].previousElementSibling.innerText.trim()) === 'true') {
+      remove_to_do[i].previousElementSibling.remove();
     }
   }
   
