--- a/my-work.html
+++ b/my-work.html
@@ -70,7 +70,7 @@ localStorage.setItem('remove-to-do-' + this.previousElementSibling.innerText.tri
  };
     
     if (localStorage.getItem('remove-to-do-' + remove_to_do[i].previousElementSibling.innerText.trim()) !== null && localStorage.getItem('remove-to-do-' + remove_to_do[i].previousElementSibling.innerText.trim()) === 'true') {
-      remove_to_do[i].previousElementSibling.remove();
+      remove_to_do[i].parentNode.remove();
     }
   }
   
