--- a/my-work.html
+++ b/my-work.html
@@ -36,7 +36,7 @@
         <div id="contents"></div>
       </div>
       <h2>Vanilla JavaScript Calculator</h2>
-      <div id="calcualtor">
+      <div id="calculator">
         <div id="results"></div>
         <button type="button">1</button>
         <button type="button">2</button>
