--- a/my-work.html
+++ b/my-work.html
@@ -71,5 +71,6 @@
       &copy; Copyright Cory Roberts, 2022
     </footer>
 <script src="to_do.js"></script>
+<script src="calculator.js"></script>
   </body>
 </html>
