--- a/my-work.html
+++ b/my-work.html
@@ -63,6 +63,7 @@
         <button type="button">&#60;</button>
         <button type="button">C</button>
         </div>
+        <button id="equals" type="button">&#61;</button>
       </div>
 </p>
     </main>
